Add JePL file structure

--- a/.sqa/config.yml
+++ b/.sqa/config.yml
@@ -1,76 +1,62 @@
 config:
   credentials: []
   project_repos:
-    github.com/ARGOeu/argo-messaging:
-      branch: devel
-      repo: https://github.com/ARGOeu/argo-messaging/
     github.com/EOSC-synergy/sqaaas-tooling:
       branch: release/1.7.10
       repo: https://github.com/EOSC-synergy/sqaaas-tooling
+    gitlab.cern.ch/corryvreckan/corryvreckan:
+      branch: master
+      repo: https://gitlab.cern.ch/corryvreckan/corryvreckan/
 environment:
   JPL_DOCKERFORCEBUILD: enabled
   JPL_KEEPGOING: enabled
 sqa_criteria:
   QC.Acc:
     repos:
-      github.com/ARGOeu/argo-messaging git:
+      gitlab.cern.ch/corryvreckan/corryvreckan git:
         commands:
-        - /usr/bin/env sh .sqa/script.gimpy-bistre-affenpinscher.sh
-        container: qc.acc_scummy-taupe-toucan
+        - /usr/bin/env sh .sqa/script.squirrely-cornflower-zonkey.sh
+        container: qc.acc_jumpy-russet-reindeer
   QC.Doc:
     repos:
-      github.com/ARGOeu/argo-messaging find_doc_files.py:
+      gitlab.cern.ch/corryvreckan/corryvreckan find_doc_files.py:
         commands:
-        - /usr/bin/env sh .sqa/script.gloppy-aquamarine-dogfish.sh
-        container: qc.doc_cheeky-bistre-stingray
-      github.com/ARGOeu/argo-messaging git:
+        - /usr/bin/env sh .sqa/script.lanky-wheat-setter.sh
+        container: qc.doc_gamy-violet-schnauzer
+      gitlab.cern.ch/corryvreckan/corryvreckan git:
         commands:
-        - /usr/bin/env sh .sqa/script.paltry-olivine-frise.sh
-        container: qc.doc_foggy-linen-barnacle
-      github.com/ARGOeu/argo-messaging markdownlint:
+        - /usr/bin/env sh .sqa/script.queasy-aquamarine-mule.sh
+        container: qc.doc_greasy-chestnut-oriole
+      gitlab.cern.ch/corryvreckan/corryvreckan markdownlint:
         commands:
-        - /usr/bin/env sh .sqa/script.frumpy-buff-emu.sh
-        container: qc.doc_stuffy-eggplant-affenpinscher
+        - /usr/bin/env sh .sqa/script.pasty-linen-jellyfish.sh
+        container: qc.doc_crabby-green-cassowary
   QC.Lic:
     repos:
-      github.com/ARGOeu/argo-messaging licensee:
+      gitlab.cern.ch/corryvreckan/corryvreckan licensee:
         commands:
-        - /usr/bin/env sh .sqa/script.whiny-beige-tarantula.sh
-        container: qc.lic_seedy-lilac-jaguar
-  QC.Met:
-    repos:
-      github.com/ARGOeu/argo-messaging cff-converter-python:
-        commands:
-        - /usr/bin/env sh .sqa/script.snoopy-brass-wombat.sh
-        container: qc.met_hazy-mustard-tzu
+        - /usr/bin/env sh .sqa/script.stinky-amaranth-drever.sh
+        container: qc.lic_seedy-goldenrod-beagle
   QC.Sec:
     repos:
-      github.com/ARGOeu/argo-messaging bandit:
+      gitlab.cern.ch/corryvreckan/corryvreckan bandit:
         commands:
-        - /usr/bin/env sh .sqa/script.stinky-grey-reindeer.sh
-        container: qc.sec_grumpy-aquamarine-chameleon
-      github.com/ARGOeu/argo-messaging gosec:
-        commands:
-        - /usr/bin/env sh .sqa/script.gamy-firebrick-moth.sh
-        container: qc.sec_woolly-copper-schnauzer
+        - /usr/bin/env sh .sqa/script.lanky-aquamarine-uakari.sh
+        container: qc.sec_squeaky-seashell-grouse
   QC.Sty:
     repos:
-      github.com/ARGOeu/argo-messaging flake8:
+      gitlab.cern.ch/corryvreckan/corryvreckan flake8:
         commands:
-        - /usr/bin/env sh .sqa/script.cloudy-linen-argentino.sh
-        container: qc.sty_silly-lilac-barnacle
-      github.com/ARGOeu/argo-messaging jsonlint:
+        - /usr/bin/env sh .sqa/script.lanky-copper-civet.sh
+        container: qc.sty_shaggy-ecru-zorse
+      gitlab.cern.ch/corryvreckan/corryvreckan hadolint:
         commands:
-        - /usr/bin/env sh .sqa/script.tacky-black-caiman.sh
-        container: qc.sty_pasty-olivine-worm
-      github.com/ARGOeu/argo-messaging staticcheck:
-        commands:
-        - /usr/bin/env sh .sqa/script.sloppy-olive-flounder.sh
-        container: qc.sty_squirrely-cinnamon-markhor
+        - /usr/bin/env sh .sqa/script.homely-mauve-drever.sh
+        container: qc.sty_boozy-ochre-burmese
   QC.Ver:
     repos:
-      github.com/ARGOeu/argo-messaging get_git_tags.py:
+      gitlab.cern.ch/corryvreckan/corryvreckan get_git_tags.py:
         commands:
-        - /usr/bin/env sh .sqa/script.skanky-ivory-nightingale.sh
-        container: qc.ver_messy-salmon-tetra
+        - /usr/bin/env sh .sqa/script.gummy-gold-gibbon.sh
+        container: qc.ver_muzzy-celadon-caterpillar
 timeout: 5400
